--- a/espresso-emporium-client/package.json
+++ b/espresso-emporium-client/package.json
@@ -17,6 +17,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
+    "react-tooltip": "^5.29.1",
     "sweetalert2": "^11.22.5",
     "tailwindcss": "^4.1.12"
   },
