--- a/espresso-emporium-client/package.json
+++ b/espresso-emporium-client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/react-query": "^5.85.6",
     "axios": "^1.11.0",
     "firebase": "^12.2.1",
     "react": "^19.1.1",
@@ -20,7 +21,8 @@
     "react-router": "^7.8.2",
     "react-tooltip": "^5.29.1",
     "sweetalert2": "^11.22.5",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "vite-plugin-mkcert": "^1.17.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
